# manaba

./: CLAUDE.md  Cargo.toml
crates/manaba-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/manaba-cli/src/: app_config.rs  cmd.rs  color.rs  config.rs  error.rs  main.rs
crates/manaba-cli/src/cmd/: course.rs  exam.rs  mod.rs  report.rs  timetable.rs
crates/manaba-mcp/: Cargo.toml
crates/manaba-mcp/src/: main.rs
crates/manaba-sdk/: CHANGELOG.md  Cargo.toml
crates/manaba-sdk/src/: assignment.rs  client.rs  cookie.rs  error.rs  lib.rs
crates/manaba-sdk/src/scrape/: course.rs  exam.rs  mod.rs  report.rs
crates/manaba-sdk/tests/: scrape.rs
