[package]
name = "manaba-mcp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
manaba-sdk = { path = "../manaba-sdk" }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
